<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1.4"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="8dp"
            android:maxLines="1"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <ImageView
            android:id="@+id/iv_get_hint"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/round_ripple"
            android:contentDescription="@string/get_hint"
            android:padding="8dp"
            android:src="@drawable/ic_lamp_off"
            app:layout_constraintBottom_toTopOf="@+id/rv_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/action_bar"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/l_text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_action_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxStrokeColor="@color/white"
        app:endIconDrawable="@drawable/ic_mic_off"
        app:endIconMode="custom"
        app:endIconTint="@null"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="абвгдеёëжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЖЗИЙКЛМНОПРСТУФХЦЧШЩЭЮЯ- "
            android:hint="@string/enter_city"
            android:imeOptions="actionSend"
            android:inputType="textCapWords"
            android:maxLength="25"
            android:singleLine="true"
            android:textColor="@color/white">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
